@@ -108,34 +108,35 @@ UdpDataLink::open(const ACE_INET_Addr& remote_address)
     this->config_->local_address_.set_port_number(port);
   }
 
-#if defined (ACE_DEFAULT_MAX_SOCKET_BUFSIZ)
-  int snd_size = ACE_DEFAULT_MAX_SOCKET_BUFSIZ;
-  int rcv_size = ACE_DEFAULT_MAX_SOCKET_BUFSIZ;
-
-  if (this->socket_.set_option(SOL_SOCKET,
-                              SO_SNDBUF,
-                              (void *) &snd_size,
-                              sizeof(snd_size)) < 0
-      && errno != ENOTSUP) {
-    ACE_ERROR_RETURN((LM_ERROR,
-                      ACE_TEXT("(%P|%t) ERROR: ")
-                      ACE_TEXT("UdpDataLink::open: failed to set the send buffer size to %d errno %m\n"),
-                      snd_size),
-                     false);
+  if (this->config_->send_buffer_size_ > 0) {
+    int snd_size = this->config_->send_buffer_size_;
+    if (this->socket_.set_option(SOL_SOCKET,
+                                SO_SNDBUF,
+                                (void *) &snd_size,
+                                sizeof(snd_size)) < 0
+        && errno != ENOTSUP) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("(%P|%t) ERROR: ")
+                        ACE_TEXT("UdpDataLink::open: failed to set the send buffer size to %d errno %m\n"),
+                        snd_size),
+                       false);
+    }
   }
 
-  if (this->socket_.set_option(SOL_SOCKET,
-                              SO_RCVBUF,
-                              (void *) &rcv_size,
-                              sizeof(int)) < 0
-      && errno != ENOTSUP) {
-    ACE_ERROR_RETURN((LM_ERROR,
-                      ACE_TEXT("(%P|%t) ERROR: ")
-                      ACE_TEXT("UdpDataLink::open: failed to set the receive buffer size to %d errno %m \n"),
-                      rcv_size),
-                     false);
+  if (this->config_->send_buffer_size_ > 0) {
+    int rcv_size = this->config_->rcv_buffer_size_;
+    if (this->socket_.set_option(SOL_SOCKET,
+                                SO_RCVBUF,
+                                (void *) &rcv_size,
+                                sizeof(int)) < 0
+        && errno != ENOTSUP) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("(%P|%t) ERROR: ")
+                        ACE_TEXT("UdpDataLink::open: failed to set the receive buffer size to %d errno %m \n"),
+                        rcv_size),
+                       false);
+    }
   }
-#endif /* ACE_DEFAULT_MAX_SOCKET_BUFSIZ */
 
   if (this->active_) {
     // For the active side, send the blob and wait for a 1 byte ack.
